--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -29,12 +29,12 @@
 \newcommand{\normalx}{\normalvectorletter_x}
 \newcommand{\normaly}{\normalvectorletter_y}
 \newcommand{\ndimensions}{N_\text{dim}}
-\newcommand{\ncomponents}{m}
+\newcommand{\ncomponents}{N_\text{comp}}
 \newcommand{\ndofs}{N_\text{dof}}
 \newcommand{\nnodes}{N_\text{node}}
 \newcommand{\dofindex}{j}
 \newcommand{\nodeindex}{k}
-\newcommand{\componentindex}{p}
+\newcommand{\componentindex}{m}
 \newcommand{\transpose}{^{\text{T}}}
 
 % schemes
@@ -242,7 +242,7 @@
 \newcommand{\jacobianx}{\mathbf{A}}
 \newcommand{\characteristicsolution}{\mathbf{w}}
 \newcommand{\wavespeed}{\eigenvalue}
-\newcommand{\maxwavespeed}{\wavespeed_{\text{max}}}
+\newcommand{\maxwavespeed}{\wavespeed^{\text{max}}}
 \newcommand{\wavestrength}{\mathcal{W}}
 
 %==============================================================================
