work on dissertation

--- a/doc/dissertation/acknowledgements.tex
+++ b/doc/dissertation/acknowledgements.tex
@@ -2,12 +2,33 @@
 % Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
 \addcontentsline{toc}{chapter}{ACKNOWLEDGEMENTS}  
 
-\indent Acknowledgements will go here.
-Dr. Ragusa
-Dr. Guermond
-Marco
-Dr. Kuzmin?
-Dr. Popov?
-deal.ii?
+\indent
+First and foremost, I would like to thank my advisor, Dr. Jean Ragusa,
+for his years of guidance, wisdom, and patience. I would also like to his
+recently graduated student Dr. Marco Delchini for his time, effort, and
+knowledge in the development of methods for the shallow water equations.
+
+I would like to thank Dr. Jean-Luc Guermond for all of his time working
+with us to develop effective numerical methods for conservation laws.
+I would also like to thank Dr. Bojan Popov for his input in these
+fruitful discussions.
+
+I would like to thank all of those who have contributed to the
+development of the \texttt{deal.II} finite element library, which has been
+a tremendous help in the implementation of the methods given in this
+dissertation. I would especially like to thank Drs. Wolfgang Bangerth
+and Bruno Turcksin, who have quickly answered many questions I had regarding
+the use of \texttt{deal.II}.
+
+I would like to thank all of those who have contributed to the development
+of FCT methods over the years, whose works I have thoroughly read in
+preparation for this research. I would like to thank Dr. Dmitri Kuzmin
+for his responses in my questions about FCT.
+
+\hl{NOTE: Is this where the following should go? Can it be better worded?}
+I would lastly like to thank those who funded this research;
+this research was funded by an NEUP (Nuclear Energy University Programs)
+fellowship from the U.S. Department of Energy and also by the \texttt{MOOSE}
+project at Idaho National Laboratory.
 
 \pagebreak{}
