--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -13,6 +13,7 @@
 \usepackage{tamuconfig}
 \usepackage{rotating}   % to allow rotation of floats
 \usepackage{color}
+\usepackage{soul} % for \hl command (highlighting)
 \usepackage{xcolor}
 \usepackage{alltt}
 \usepackage{amsmath}
